--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,9 +38,15 @@ nav > p {
 }
 
 #main-content > .section {
-    position: relative;    
-    width: 100%;
-    height: 100vh;
+    position: relative;
+    width: calc(100% - 40px);
+    height: calc(100vh - 40px);
+    padding: 20px;
+}
+
+#main-content > .section.expandable {
+    height: auto;
+    min-height: calc(100vh - 40px);
 }
 
 .section > a:first-of-type {
