--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -134,7 +134,7 @@ nav > p {
 .panel button {
     position: relative;
     display: block;
-    width: 200px;
+    min-width: 200px;
     height: 40px;
     padding: 5px 10px;
     
