--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -322,6 +322,38 @@ nav > a p {
 
 
 
+footer {
+    width: 100%;
+    height: 67px;
+    background-color: #4e5158;
+}
+
+footer a {
+    position: relative;
+    padding: 10px 15px;
+    text-decoration: none;
+    
+    background-color: #ededed;
+    border: solid 4px black;
+    border-radius: 10px;
+    
+    transition: transform ease 0.2s;
+}
+
+footer a:hover {
+    transform: scale(1.05);
+    background-color: #d9d9d9;
+}
+
+footer a p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    color: black;
+    text-align: center;
+}
+
+
+
 
 
 .flex-column {
