--- a/css/home.css
+++ b/css/home.css
@@ -17,7 +17,7 @@
 
 
 
-h1 {
+.section > h1 {
     margin-top: 50px;
     padding: 0 25px;
     font-family: "Fredoka One", cursive;
@@ -26,7 +26,7 @@ h1 {
     color: white;
 }
 
-ul {
+.section > ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -35,12 +35,12 @@ ul {
     padding: 0 25px;
 }
 
-ul > li {
+.section > ul > li {
     display: inline-block;
     margin: 5px;
 }
 
-ul > li a {
+.section > ul > li a {
     display: inline-block;
     padding: 8px 15px;
     background-color: #aac76c;
@@ -52,14 +52,14 @@ ul > li a {
     transition: ease 0.2s;
 }
 
-ul > li a:hover {
+.section > ul > li a:hover {
     background-color: #96aa6d;
     border: solid 5px #818971;
     transform: translateY(-5px);
     cursor: pointer;
 }
 
-ul > li a > p {
+.section > ul > li a > p {
     font-family: "Fredoka One", cursive;
     font-size: 18px;
     color: white;
